--- a/css/styles.css
+++ b/css/styles.css
@@ -64,14 +64,124 @@ ul {
     border-radius: 100px;
 }
 
-
 /* header-top */
 
 .header-top {
     position: relative;
     padding: 29px 0;
     background-color: #000000;
-    z-index: 1;
+    z-index: 2;
+}
+
+.burger-menu {
+    display: none;
+}
+
+.burger-menu__icon {
+    position: relative;
+    width: 36px;
+    height: 28px;
+}
+
+.burger-menu__icon:hover {
+    cursor: pointer;
+}
+
+.burger-menu__icon span {
+    display: block;
+    height: 3.65px;
+    background: var(--whiteTextColor);
+}
+
+.burger-menu__icon span::after, .burger-menu__icon span::before {
+    content: '';
+    height: 3.65px;
+    background: var(--whiteTextColor);
+}
+
+.burger-menu__icon span::after {
+    position: absolute;
+    top: 50%;
+    width: 28.2px;
+    transform: translateY(-50%);
+}
+
+.burger-menu__icon span::before {
+    position: absolute;
+    top: 100%;
+    width: 24px;
+    transform: translateY(-100%);
+}
+
+.burger-menu__window {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 29px;
+    width: 100%;
+    height: 90vh;
+    background: rgba(0, 0, 0, 0.9);
+}
+
+.burger-menu__window-disabled {
+    display: none;
+}
+
+.burger-menu__closeIcon {
+    position: relative;
+    width: 29px;
+    height: 29px;
+}
+
+.burger-menu__closeIcon:hover {
+    cursor: pointer;
+}
+
+.burger-menu__closeIcon span::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 100%;
+    height: 3.73px;
+    background: var(--whiteTextColor);
+    transform: rotate(45deg);
+}
+
+.burger-menu__closeIcon span::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 100%;
+    height: 3.73px;
+    background: var(--whiteTextColor);
+    transform: rotate(-45deg);
+}
+
+.burger-menu__list {
+    margin-top: 55px;
+}
+
+.burger-menu__item {
+    margin-top: 40px;
+}
+
+.burger-menu__auth {
+    display: inline-block;
+    margin-top: 135px;
+    padding: 20px 95px;
+    border: 2px solid var(--mainColor);
+    border-radius: 100px;
+    background: none;
+}
+
+.header-top .search {
+    display: none;
+}
+
+.search__input-disabled {
+    display: none;
 }
 
 .header-container {
@@ -156,7 +266,7 @@ ul {
     position: relative;
     padding: 20px 0;
     background: rgba(0, 0, 0, 0.4);
-    z-index: 1;
+    z-index: 2;
 }
 
 .product-nav {
@@ -261,6 +371,7 @@ ul {
 .product-nav__menuItem:not(:last-child) {
     margin-bottom: 20px;
 }
+
 .product-nav__menuLink {
     display: block;
     position: relative;
@@ -273,7 +384,7 @@ ul {
     outline: 2px solid var(--mainColor);
 }
 
-.product-nav__menuLink:active::before{
+.product-nav__menuLink:active::before {
     content: '';
     position: absolute;
     top: 0;
@@ -365,7 +476,6 @@ ul {
 
 .search {
     display: flex;
-    width: 250px;
 }
 
 .search:hover .search__button-img {
@@ -391,7 +501,7 @@ ul {
 }
 
 .search__button:focus {
-    outline: 2px solid var(--mainColor);   
+    outline: 2px solid var(--mainColor);
 }
 
 .search__input {
@@ -405,7 +515,7 @@ ul {
 }
 
 .search__input:focus {
-    outline: 2px solid var(--mainColor);   
+    outline: 2px solid var(--mainColor);
 }
 
 .search__input:active {
@@ -424,12 +534,48 @@ ul {
     margin: -170.45px 0 0 0;
     padding: 233px 0 122px 0;
     background: url("background_img/hero/1.jpg");
+    background-size: 100%;
+    background-position: center;
+    animation: heroSize 2s linear infinite alternate;
+}
+
+.section-hero::after, .section-hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 0;
-    opacity: 0.99;
+}
+
+.section-hero::after {
+    opacity: 0;
+    background: url("background_img/hero/2.jpg");
+    background-size: 100%;
+    background-position: center;
+    animation-name: heroSize, heroChange;
+    animation-duration: 2s, 10s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.section-hero::before {
+    opacity: 0;
+    background: url("background_img/hero/3.jpg");
+    background-size: 100%;
+    background-position: center;
+    animation-name: heroSize, heroChange;
+    animation-duration: 2s, 10s;
+    animation-delay: 0s, 5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 .section-hero__content {
+    position: relative;
     width: 597px;
+    z-index: 1;
 }
 
 .section-hero__header {
@@ -453,4 +599,66 @@ ul {
     color: var(--whiteTextColor);
     font-weight: 700;
     font-size: var(--headerLinkFontSize);
+}
+
+@media (max-width: 1024px) {
+    body {
+        width: 1024px;
+    }
+    .container {
+        width: 924px;
+    }
+    /* header-top */
+    .burger-menu {
+        display: block;
+    }
+    .burger-menu__window {
+        /* display: none; */
+    }
+    .navigation {
+        display: none;
+    }
+    .auth {
+        display: none;
+    }
+    .logo {
+        margin: 0 auto;
+    }
+    .header-top .search {
+        display: flex;
+    }
+    /* header-bot */
+    .header-bot {
+        display: none;
+    }
+}
+
+@keyframes heroSize {
+    0% {
+        background-size: 100%;
+    }
+    33% {
+        background-size: 100%;
+    }
+    66% {
+        background-size: 100%;
+    }
+    100% {
+        background-size: 110%;
+    }
+}
+
+@keyframes heroChange {
+    0% {
+        opacity: 1;
+    }
+    33% {
+        opacity: 1;
+    }
+    66% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
