--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,19 @@ ul {
     border-radius: 100px;
 }
 
+.section-heading {
+    font-size: var(--h2FontSize);
+    line-height: 48px;
+    font-weight: 400;
+}
+
+.section-text {
+    margin-top: 25px;
+    width: calc(1086*100%/1600);
+    font-size: var(--pFontSize);
+    line-height: 32px;
+}
+
 /* header-top */
 
 .header-top {
@@ -664,9 +677,22 @@ ul {
     background-color: #7943A4;
 }
 
+/* section-we */
+
+.section-we {
+    padding-top: 95px;
+    padding-bottom: 80px;
+}
+
 @media (max-width: 1024px) {
     body {
         max-width: 1024px;
+    }
+    .container {
+        width: calc(924*100%/1024);
+    }
+    .section-text {
+        width: 100%;
     }
     /* header-top */
     .burger-menu {
@@ -719,11 +745,18 @@ ul {
     .section-hero__button {
         margin-top: 135px;
     }
+    /* section-we */
+    .section-we {
+        padding-top: 85px;
+    }
 }
 
 @media (max-width: 768px) {
     body {
-        width: 768px;
+        max-width: 768px;
+    }
+    .container {
+        width: calc(668*100%/768);
     }
     /* section-hero */
     .section-hero {
@@ -741,11 +774,29 @@ ul {
         background-size: auto 100%;
         background-position: center;
     }
+    .section-hero__content {
+        width: 100%;
+    }
+    .section-hero__header {
+        font-size: 9.5vw;
+        width: 90%;
+    }
 }
 
 @media (max-width: 320px) {
+    :root {
+        --h2FontSize: 28px;
+        --pFontSize: 14px;
+    }
     body {
-        width: 320px;
+        max-width: 320px;
+    }
+    .container {
+        width: calc(290*100%/320);
+    }
+    .section-text {
+        margin-top: 5px;
+        line-height: 28px;
     }
     /* .header-top */
     .header-top {
@@ -777,7 +828,7 @@ ul {
     }
     .search__window .search {
         margin: 0 auto;
-        width: 200px;
+        width: 100%;
     }
     .search__window .container {
         display: block;
@@ -827,6 +878,18 @@ ul {
         margin-top: 43px;
         padding: 12px 15px;
         font-size: 12px;
+    }
+    .section-hero__content {
+        width: 100%;
+    }
+    .section-hero__header {
+        margin: 0 auto;
+        font-size: 10vw;
+        width: 90%;
+    }
+    /* section-we */
+    .section-we {
+        padding-top: 45px;
     }
 }
 
